# ur5-3d-object-scanner-reconstruction

./: .gitignore
.github/workflows/: ros2_build.yml
dataset/: poses.txt
src/ur5_scan_sim/: CMakeLists.txt  README.md  package.xml
src/ur5_scan_sim/config/: ur5_controllers.yaml  ur5_scan.rviz
src/ur5_scan_sim/launch/: sim.launch.py
src/ur5_scan_sim/scripts/: camera_node.py  image_processing_node.py  interactive_control_node.py  motion_planning_node.py  reconstruct_3d.py  reconstruction_node.py  view_results.py
src/ur5_scan_sim/urdf/: ur5_with_camera.xacro
src/ur5_scan_sim/worlds/: scan_world.sdf
